# HACKHUB---FULL-FINAL

./: ai_assistant.py  app.py  enhanced_ai_assistant.py  gemini_assistant.py  models.py  package-lock.json  package.json  pyproject.toml  routes.py  team_matcher.py
instance/: hackhub.db
static/css/: animations.css  style.css
static/js/: ai-assistant.js  charts.js  dynamic-effects.js  main.js
templates/: 404.html  500.html  base.html  connect.html  hackathon_portals.html  index.html  participants.html  project_ideas.html  register.html  simple_participants.html  simple_register.html  teams.html  teams_view.html
